backend: A-grade architecture improvements
Security:
- OriginValidationFilter: add HSTS and Referrer-Policy headers
- RateLimitingFilter: add size guard to prevent map growth past 50k entries

Performance:
- BusScheduleServiceImpl: deduplicate inline translation-loading via buildLocationTranslationMap()
- ContributionProcessingService: remove @Transactional from integrateApprovedContributionsBatch()
- BusAdminService: add @CacheEvict on updateBusTiming() and deactivateBus()

Reliability:
- ImageContributionProcessingService: javax->jakarta PreDestroy; fixed thread pool->virtual threads

DB Migrations:
- V115: fix location hierarchy seeding
- V116: deduplicate locations + delete orphaned locations
- V117: maintenance stored procs and daily MySQL EVENT

Cleanup:
- Remove duplicate PaginatedResponse record and PaginationExampleController